--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Argon.js Tutorials
 
 <h2>Tutorials</h2>
 <ol id="tutorials">
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
     <li>
     	<a href='{{ post.url }}'>{{ post.title }}</a>
     	<p>{{ post.short_description }}</p></li>
