--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@ title: Argon.js Tutorials
 ---
 
 <h2>Tutorials</h2>
-<ol id="tutorials">
+<div id="tutorials">
 {% for post in site.posts reversed %}
-    <li>
-    	<a href='{{ post.url }}'>{{ post.title }}</a>
-    	<p>{{ post.short_description }}</p></li>
+    <div class="tutorial-item">
+        <div class="tutorial-item-number">{{ forloop.index }}</div>
+        <div class="tutorial-item-details">
+            <a href='{{ post.url }}'>{{ post.title }}</a>
+            <p>{{ post.short_description }}</p>
+        </div>
+    </div>
 {% endfor %}
-</ol>
+</div>
