Fix of Directions example
This is the new directions example (Tutorial 4) using the same css
style as Periodic.

--- a/tutorial4/index.html
+++ b/tutorial4/index.html
@@ -3,10 +3,11 @@
   
   <title>Directions</title>
   
-  <script src="../../vendor/three.js"></script>
-  <script src="../../vendor/threestrap.js"></script>
+  <script src="../../js/three.js"></script>
+  <script src="../../js/threestrap.js"></script>
   <script src="../../argon.js"></script>
   <script src="../../argon-three.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <body style="background-color:rgba(255,255,255,0.7)">
     <h2>Six directions example</h2>
