--- a/code/tutorial1/index.html
+++ b/code/tutorial1/index.html
@@ -1,5 +1,4 @@
-
-<<!doctype html>  
+<!doctype html>  
 </html> 
 <meta charset="utf-8">  
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"  
